# TaskProject1

./: .gitignore  README.md  pyproject.toml
TaskProject/TaskProject/: settings.py  urls.py
TaskProject/api/: admin.py  models.py  serializers.py  urls.py  views.py
TaskProject/api/migrations/: 0001_initial.py  0002_alter_dep_id_head_alter_employee_code_dep.py  0003_alter_dep_id_head_alter_employee_code_dep.py  0004_alter_dep_id_head_alter_employee_code_dep.py  0005_remove_employee_code_dep_dep_date_create_and_more.py  0006_alter_employee_date_transfer.py  0007_alter_employee_id_dep_new_alter_employee_id_dep_old.py  0008_alter_dep_options_alter_employee_options_and_more.py  0009_alter_dep_code.py  0010_remove_dep_head_appointment.py
TaskProject/templates/: doc.html
